--- a/templates/default/logging.conf.erb
+++ b/templates/default/logging.conf.erb
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,ceilometer,cinder,glance,horizon,keystone,nova,swift,amqplib,sqlalchemy,boto,suds,eventletwsgi,<%= node["openstack"]["logging"]["ignore"].map{|k,v| k.gsub(/\W/, '_')}.join(',') %>
+keys=root,ceilometer,cinder,glance,horizon,keystone,nova,quantum,swift,amqplib,sqlalchemy,boto,suds,eventletwsgi,<%= node["openstack"]["logging"]["ignore"].map{|k,v| k.gsub(/\W/, '_')}.join(',') %>
 
 [formatters]
 keys=normal,normal_with_name,debug,syslog_with_name,syslog_debug
@@ -94,6 +94,11 @@ qualname=keystone
 level=DEBUG
 handlers=prod,debug
 qualname=nova
+
+[logger_quantum]
+level=DEBUG
+handlers=prod,debug
+qualname=quantum
 
 [logger_swift]
 level=DEBUG
