--- a/templates/default/logging.conf.erb
+++ b/templates/default/logging.conf.erb
@@ -1,53 +1,31 @@
 [loggers]
-keys=root,ceilometer,cinder,glance,horizon,keystone,nova,neutron,swift,amqplib,sqlalchemy,boto,suds,eventletwsgi,<%= node["openstack"]["logging"]["ignore"].map{|k,v| k.gsub(/\W/, '_')}.join(',') %>
+keys=<%= node["openstack"]["logging"]['loggers'].keys.join(',') %>,<%= node["openstack"]["logging"]["ignore"].map{|k,v| k.gsub(/\W/, '_')}.join(',') %>
 
 [formatters]
-keys=normal,normal_with_name,debug,syslog_with_name,syslog_debug
+keys=<%= node["openstack"]["logging"]['formatters'].keys.join(',') %>
 
 [handlers]
-keys=stderr,devel,prod,debug
+keys=<%= node["openstack"]["logging"]['handlers'].keys.join(',') %>
 
 ## FORMATTERS ##
 
-[formatter_debug]
-format=[%(name)s]: %(asctime)s %(levelname)s %(module)s.%(funcName)s %(message)s
+<% node["openstack"]["logging"]['formatters'].each do |section, options| %>
+[formatter_<%= section %>]
+<% options.each do |key, value| %>
+<%= key %>=<%= value %>
+<% end %>
 
-[formatter_normal]
-format=%(asctime)s %(levelname)s %(message)s
-
-[formatter_normal_with_name]
-format=[%(name)s]: %(asctime)s %(levelname)s %(message)s
-
-[formatter_syslog_with_name]
-format=%(name)s: %(levelname)s %(message)s
-
-[formatter_syslog_debug]
-format=%(name)s: %(levelname)s %(module)s.%(funcName)s %(message)s
+<% end %>
 
 ## LOGGERS ##
 
-[logger_amqplib]
-level = WARNING
-handlers = stderr
-qualname = amqplib
+<% node["openstack"]["logging"]['loggers'].each do |section, options| %>
+[logger_<%= section %>]
+<% options.each do |key, value| %>
+<%= key %>=<%= value %>
+<% end %>
 
-[logger_sqlalchemy]
-level = WARNING
-handlers = stderr
-qualname = sqlalchemy
-# "level = INFO" logs SQL queries.
-# "level = DEBUG" logs SQL queries and results.
-# "level = WARNING" logs neither.  (Recommended for production systems.)
-
-[logger_boto]
-level = WARNING
-handlers = stderr
-qualname = boto
-
-[logger_suds]
-level = INFO
-handlers = stderr
-qualname = suds
+<% end %>
 
 <% node["openstack"]["logging"]["ignore"].each do |k,v| %>
 [logger_<%= k.gsub(/\W/, '_') %>]
@@ -56,81 +34,13 @@ handlers = prod,debug
 qualname = <%= k %>
 
 <% end %>
-[logger_eventletwsgi]
-level = WARNING
-handlers = stderr
-qualname = eventlet.wsgi.server
-
-[logger_root]
-level=NOTSET
-handlers=devel
-
-[logger_ceilometer]
-level=DEBUG
-handlers=prod,debug
-qualname=ceilometer
-
-[logger_cinder]
-level=DEBUG
-handlers=prod,debug
-qualname=cinder
-
-[logger_glance]
-level=DEBUG
-handlers=prod,debug
-qualname=glance
-
-[logger_horizon]
-level=DEBUG
-handlers=prod,debug
-qualname=horizon
-
-[logger_keystone]
-level=DEBUG
-handlers=prod,debug
-qualname=keystone
-
-[logger_nova]
-level=DEBUG
-handlers=prod,debug
-qualname=nova
-
-[logger_neutron]
-level=DEBUG
-handlers=prod,debug
-qualname=neutron
-
-[logger_swift]
-level=DEBUG
-handlers=prod,debug
-qualname=swift
 
 ## HANDLERS ##
 
-[handler_stderr]
-class = StreamHandler
-args = (sys.stderr,)
-formatter = debug
+<% node["openstack"]["logging"]['handlers'].each do |section, options| %>
+[handler_<%= section %>]
+<% options.each do |key, value| %>
+<%= key %>=<%= value %>
+<% end %>
 
-[handler_devel]
-class=StreamHandler
-level=NOTSET
-formatter=debug
-args=(sys.stdout,)
-
-[handler_file]
-class=FileHandler
-formatter=debug
-args=('/var/log/openstack/openstack.log', 'w')
-
-[handler_prod]
-level=INFO
-class=handlers.SysLogHandler
-formatter=syslog_with_name
-args=(('/dev/log'), handlers.SysLogHandler.LOG_LOCAL0)
-
-[handler_debug]
-level=DEBUG
-class=handlers.SysLogHandler
-formatter=syslog_debug
-args=(('/dev/log'), handlers.SysLogHandler.LOG_LOCAL1)
+<% end %>
