Fix logging.conf: No section: 'logger_'
Caused by trailing comma on keys= line

Change-Id: Ie0a87642acbeb2a019f462889e8f8de84816377e
Closes-Bug: #1365677

--- a/templates/default/logging.conf.erb
+++ b/templates/default/logging.conf.erb
@@ -1,5 +1,5 @@
 [loggers]
-keys=<%= node["openstack"]["logging"]['loggers'].keys.join(',') %>,<%= node["openstack"]["logging"]["ignore"].map{|k,v| k.gsub(/\W/, '_')}.join(',') %>
+keys=<%= (node["openstack"]["logging"]['loggers'].keys + node["openstack"]["logging"]["ignore"].map{|k,v| k.gsub(/\W/, '_')}).join(',') %>
 
 [formatters]
 keys=<%= node["openstack"]["logging"]['formatters'].keys.join(',') %>
