--- a/templates/default/openrc.erb
+++ b/templates/default/openrc.erb
@@ -6,6 +6,7 @@ export OS_PASSWORD=<%= @password %>
 export OS_TENANT_NAME=<%= @tenant %>
 export OS_AUTH_URL=<%= @identity_endpoint %>
 export OS_REGION_NAME=<%= node['openstack']['region'] %>
+export OS_VOLUME_API_VERSION=<%= @volume_api_version %>
 
 <% if node['openstack']['misc_openrc'] %>
 # Misc options
