Initial kilo updates
MetaData changes
- bump metadata versions to 11

Gemfile changes
- bump robocop to 0.29.1
- bump chef to 11.18.6  close to 12 but not quite (need infra changes for 12)
- bump berks to 3.2.1 to get fix for running twice (destination already exists)

Rubocop changes
- add .robucop_todo.yml for future cleanup
    - rubocop --auto-gen-config and add an inherit_from: .rubocop_todo.yml in your .rubocop.yml
- add .bundle/**/* to .rubocop.yml
- add .cookbooks/**/* to robocop.yml
- fixup berks-cookbooks/** with /**/*

Changelog changes
- delete Changelog.rb

Other codes changes
- change juno to kilo where appropriate
- cleanup any obvious old deprecated code

Change-Id: I146aa7f7ba4024115c1297103e176a72336fbe5d
Partial-Bug: #1426424

--- a/templates/default/logging.conf.erb
+++ b/templates/default/logging.conf.erb
@@ -1,5 +1,5 @@
 [loggers]
-keys=<%= (node["openstack"]["logging"]['loggers'].keys + node["openstack"]["logging"]["ignore"].map{|k,v| k.gsub(/\W/, '_')}).join(',') %>
+keys=<%= (node["openstack"]["logging"]['loggers'].keys).join(',') %>
 
 [formatters]
 keys=<%= node["openstack"]["logging"]['formatters'].keys.join(',') %>
@@ -24,14 +24,6 @@ keys=<%= node["openstack"]["logging"]['handlers'].keys.join(',') %>
 <% options.each do |key, value| %>
 <%= key %>=<%= value %>
 <% end %>
-
-<% end %>
-
-<% node["openstack"]["logging"]["ignore"].each do |k,v| %>
-[logger_<%= k.gsub(/\W/, '_') %>]
-level = <%= v %>
-handlers = prod,debug
-qualname = <%= k %>
 
 <% end %>
 
